# episimlab

./: .gitignore  20210511_DemoPartitionProcess.ipynb  20210720_DemoATX.ipynb  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  catchment_census_tract_overlap.ipynb  paper.bib  paper.md  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: colab-badge.yml  docker-publish.yml  joss-draft-pdf.yml  publish.yml  tox.yml
data/: polymod_contacts.csv
docs/: .buildinfo  genindex.html  index.html  index.md  objects.inv  py-modindex.html  search.html
docs/api-ref/: episimlab.html  episimlab.models.html  episimlab.partition.html  episimlab.setup.greek.html  episimlab.setup.html  episimlab.utils.html  modules.html
docsrc/: Makefile  conf.py
episimlab/: __init__.py  compt_model.py  foi.py  pytest_utils.py  version.py
episimlab/cy_utils/: cy_utils.pxd  cy_utils.pyx
episimlab/fit/: llsq.py
episimlab/foi/: base.py  bf_cython.py  bf_cython_engine.pyx  brute_force.py  brute_force_vaccine.py
episimlab/io/: config.py
episimlab/models/: __init__.py  (+9 more)
examples/: 20201005_try_xarray_simlab.ipynb  20201007_try_xarray_simlab.ipynb  20201009_try_xarray_simlab.ipynb  20201014_sandbox.ipynb  20201019_sandbox.ipynb  20201116_try_viz.ipynb  20201117_example.ipynb  20201124_example.ipynb  20201125_example.ipynb  20201129_example.ipynb  20201202_example.ipynb  20201204_debug_xsimlab.ipynb  20201211_episimlab_demo.ipynb  20201211_xsimlab_demo.ipynb  20210203_convert_legacy_config.ipynb  20210203_test_kp_migration.ipynb  20210209_aisd_pilot.ipynb  20210209_example_v1.yaml  20210504_munge_ll_hosp_data.ipynb  20210511_DemoPartitionProcess.ipynb  20210808_markov_sandbox.py  example_sir.py  example_sir.yaml  example_sirv.ipynb  example_sirv.py  granular_v1.py  partition_v1.py  profile.html  vaccine_v1.py
notebooks/: 20210629_lccf.ipynb  20210630_lccf.py  20210731_markov_sandbox.ipynb  20210804_markov_sandbox.ipynb  20210805_markov_sandbox.ipynb  20210808_markov_sandbox.ipynb  20210808_markov_sandbox.py
scripts/: 20210512_partition_model.py  20210512_partition_model.yaml  20210512_partition_model_frontera.sh  20210514_pytest_frontera.sh  20210615_partition_model.py  20210623_lccf.py  20210625_lccf.yaml  20210716_mid_epidemic.py  DemoATX.py
tests/: __init__.py  conftest.py  test_apply_counts_delta.py  test_bf_foi.py  test_bf_seir.py  test_epi_model.py  test_models.py  test_partition.py  test_travel_manager.py  test_utils.py
(+262 files in other folders)
