[tool.poetry]
name = "episimlab"
version = "0.1.0"
description = "Framework for modular development of epidemiological models"
authors = ["Ethan Ho <eho@tacc.utexas.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.20.2"
scipy = { version = "^1.6.2",  python = ">=3.8,<3.10" }
Cython = "^0.29.23"
graphviz = "^0.16"
xarray = "^0.17.0"
dask = {extras = ["dataframe", "distributed"], version = "^2021.4.0"} 
xarray-simlab = "^0.5"
matplotlib = "^3.4.1"
bokeh = "^2.3.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
pytest-xdist = "^2.2.1"
tox = "^3.23.0"
pytest-pythonpath = "^0.7.3"
bokeh = "^2.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]