[tool.poetry]
name = "episimlab"
version = "2.0.1"
description = "Framework for modular development of epidemiological models"
authors = ["Ethan Ho <eho@tacc.utexas.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7"
graphviz = "^0.17"
xarray = "^0.19.0"
xarray-simlab = "^0.5.0"
matplotlib = "^3.4.3"
networkx = "^2.6.3"
dask = {extras = ["dataframe", "distributed"], version = "^2021.4.0"} 
netCDF4 = "^1.5.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
pytest-xdist = "^2.2.1"
tox = "^3.23.0"
pytest-pythonpath = "^0.7.3"
bokeh = "^2.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]