[tool.poetry]
name = "episimlab"
version = "2.2.1"
description = "Framework for modular development of compartmental epidemic models"
authors = ["Ethan Ho <eho@tacc.utexas.edu>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = ">=3.7,<4"
graphviz = ">=0.17,<1"
xarray = ">=0.19.0"
xarray-simlab = ">=0.5.0,<1"
dask = {extras = ["distributed"], version = ">=2021.4.0,<2022"}
matplotlib = ">=3.4.3,<4"
networkx = ">=2.6.3,<3"

[tool.poetry.dev-dependencies]
pytest = ">=6.2.3,<7"
pytest-xdist = ">=2.2.1,<3"
tox = ">=3.23.0,<4"
pytest-pythonpath = ">=0.7.3,<1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]